# nested-json

./: README.md  build-local.sh  dev-requirements.txt  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
nested_json/: __init__.py
tests/: test_dump.py  test_dumps.py  test_load.py  test_nested.py  test_parse.py  test_process.py
