[metadata]
name = nested_json
version = 1.0.1
author = Laszlo Szikszai
author_email = sziklaszlo@gmail.com
description = A library to manage JSONs with encoded JSON more effectively (e.g. AWS Event Bridge Events, AWS API Gateway Events)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/szikszail/nested-json
project_urls =
    Bug Tracker = https://github.com/szikszail/nested-json/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    nested_json
python_requires = >=3.6